--- a/WebAppAngular/WebAppAngular.csproj
+++ b/WebAppAngular/WebAppAngular.csproj
@@ -326,6 +326,8 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="htmlpage.png" />
+    <Content Include="jscontroller.png" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-cookies.js" />
